--- a/index.html
+++ b/index.html
@@ -726,6 +726,22 @@ Siddharth Srivastava, Shlomo Zilberstein, Abhishek Gupta, Pieter Abbeel, Stuart 
               </a></p>
               </td>
             </tr>
+
+
+            <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+              <tr>
+                <td>
+                <br>
+                <p align="right"><font size="2">
+                  Website template from <a href="http://www.cs.berkeley.edu/~barron/">Jon Barron</a>.
+            <br>
+            Last updated January 2021.
+                  </font>
+                </p>
+                </td>
+              </tr>
+              </table>
+
       </table>
 
     </td>
