--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </p>
 
             <p>
-            I did my PhD in machine learning and robotics at <a href=http://bair.berkeley.edu>BAIR</a> at UC Berkeley, where I was advised by <a href=https://people.eecs.berkeley.edu/~svlevine/>Professor Sergey Levine</a> and <a href=http://www.cs.berkeley.edu/~pabbeel/>Professor Pieter Abbeel</a> and funded by the <a href=http://www.nsfgrfp.org/>NSF GRFP</a>. In a previous life, I completed my bachelors degrgee at <a href=http://www.eecs.berkeley.edu/>UC Berkeley</a>. 
+            I did my PhD in machine learning and robotics at <a href=http://bair.berkeley.edu>BAIR</a> at UC Berkeley, where I was advised by <a href=https://people.eecs.berkeley.edu/~svlevine/>Professor Sergey Levine</a> and <a href=http://www.cs.berkeley.edu/~pabbeel/>Professor Pieter Abbeel</a> and funded by the <a href=http://www.nsfgrfp.org/>NSF GRFP</a>. In a previous life, I completed my bachelors degree at <a href=http://www.eecs.berkeley.edu/>UC Berkeley</a>. 
             </p>
 
             <p>
@@ -108,6 +108,22 @@
         </tr>
       </table>
       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+
+             <tr >
+          <td width="15%">
+            <div class="one">
+                <img src='images/vaprl.png' width=130%>
+            </div>
+              </td>
+              <td valign="top" width="85%">
+              <p><a href="https://arxiv.org/pdf/2107.12931.pdf">
+        <papertitle>Persistent Reinforcement Learning via Subgoal Curricula</papertitle></a><br>Archit Sharma, Abhishek Gupta, Sergey Levine, Karol Hausman, Chelsea Finn<br>
+                <em>arXiv preprint</em><br>
+                <a href ="https://arxiv.org/abs/2107.12931">paper</a>
+              </a></p>
+              </td>
+            </tr>
+
 
 
              <tr >
@@ -173,7 +189,7 @@ John D Co-Reyes, Suvansh Sanjeev, Glen Berseth, Abhishek Gupta, Sergey Levine<br
               <td valign="top" width="85%">
               <p><a href="https://arxiv.org/pdf/2106.07278.pdf">
         <papertitle>Which Mutual-Information Representation Learning Objectives are Sufficient for Control?</papertitle></a><br>
-Gregory Kahn, Pieter Abbeel, Sergey Levine<br>
+Kate Rakelly, Abhishek Gupta, Carlos Florensa, Sergey Levine<br>
                 <em>arXiv preprint</em><br>
                 <a href ="https://arxiv.org/abs/2106.07278">paper</a>
               </a></p>
