--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
               <name>Abhishek Gupta</name>
             </p>
             <p>
-            I am currently a post-doctoral researcher at MIT, and an affiliate assistant professor in computer science at the Paul G. Allen School at the University of Washington. I will join the department as an assistant professor in Fall 2022. At MIT, I am collaborating with Professor Russ Tedrake and Professor Pulkit Agarwal. I am currently looking for highly motivated students interested in pushing the frontier robotics and machine learning problems to work with me at UW. Please apply directly through the UW admissions <a href="https://www.cs.washington.edu/academics/phd/admissions">portal</a>, and drop me a line to look through your application. 
+            I am currently a post-doctoral researcher at MIT, and an affiliate assistant professor in computer science at the Paul G. Allen School at the <a  href="https://www.washington.edu/">University of Washington</a>. I will join the department as an assistant professor in Fall 2022. At MIT, I am collaborating with <a href="https://groups.csail.mit.edu/locomotion/russt.html">Professor Russ Tedrake</a> and <a href="https://people.csail.mit.edu/pulkitag/">Professor Pulkit Agarwal</a>. I am currently looking for highly motivated students interested in pushing the frontier robotics and machine learning problems to work with me at UW. Please apply directly through the UW admissions <a href="https://www.cs.washington.edu/academics/phd/admissions">portal</a>, and drop me a line to look through your application. 
             </p>
 
             <p>
-            I did my PhD in machine learning and robotics at <a href=http://bair.berkeley.edu>BAIR</a> at UC Berkeley, where I was advised by <a href=https://people.eecs.berkeley.edu/~svlevine/>Professor Sergey Levine</a> and <a href=http://www.cs.berkeley.edu/~pabbeel/>Professor Pieter Abbeel</a> and funded by the <a href=http://www.nsfgrfp.org/>NSF GRFP</a>. In a previous life, I completed my bachelors degree at <a href=http://www.eecs.berkeley.edu/>UC Berkeley</a>. 
+            I did my PhD in machine learning and robotics at <a href=http://bair.berkeley.edu>BAIR</a> at <a href="https://www.berkeley.edu/">UC Berkeley</a>, where I was advised by <a href=https://people.eecs.berkeley.edu/~svlevine/>Professor Sergey Levine</a> and <a href=http://www.cs.berkeley.edu/~pabbeel/>Professor Pieter Abbeel</a> and funded by the <a href=http://www.nsfgrfp.org/>NSF GRFP</a>. In a previous life, I completed my bachelors degree at <a href=http://www.eecs.berkeley.edu/>UC Berkeley</a>. 
             </p>
 
             <p>
