--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <a href="mailto:abhigupta@eecs.berkeley.edu">Email</a> &nbsp/&nbsp
               <a href="files/cv.pdf">CV</a> &nbsp/&nbsp
               <a href="https://github.com/abhishekunique"> GitHub </a> &nbsp/&nbsp
-              <a href="https://scholar.google.com/citations?hl=en&user=1wLVDP4AAAAJ">Google Scholar</a>
+              <a href="https://scholar.google.com/citations?hl=en&user=1wLVDP4AAAAJ">Google Scholar</a> &nbsp/&nbsp
               <a href="https://www2.eecs.berkeley.edu/Pubs/TechRpts/2021/EECS-2021-191.pdf">Ph.D. Thesis</a>
             </p>
           </td>
