modified for UW

--- a/index.html
+++ b/index.html
@@ -77,15 +77,18 @@
               <name>Abhishek Gupta</name>
             </p>
             <p>
-            I am currently a post-doctoral researcher at MIT, and an affiliate assistant professor in computer science at the Paul G. Allen School at the <a  href="https://www.washington.edu/">University of Washington</a>. I will join the department as an assistant professor in Fall 2022. At MIT, I am collaborating with <a href="https://groups.csail.mit.edu/locomotion/russt.html">Professor Russ Tedrake</a> and <a href="https://people.csail.mit.edu/pulkitag/">Professor Pulkit Agarwal</a>. I am currently looking for highly motivated students interested in pushing the frontier of robotics and machine learning problems to work with me at UW. Please apply directly through the UW admissions <a href="https://www.cs.washington.edu/academics/phd/admissions">portal</a>, and drop me a line to look through your application. 
+            I am an assistant professor in computer science and engineering at the Paul G. Allen School at the <a  href="https://www.washington.edu/">University of Washington</a>. 
             </p>
 
             <p>
-            I completed my PhD in machine learning and robotics at <a href=http://bair.berkeley.edu>BAIR</a> at <a href="https://www.berkeley.edu/">UC Berkeley</a>, where I was advised by <a href=https://people.eecs.berkeley.edu/~svlevine/>Professor Sergey Levine</a> and <a href=http://www.cs.berkeley.edu/~pabbeel/>Professor Pieter Abbeel</a> and funded by the <a href=http://www.nsfgrfp.org/>NSF GRFP</a>. In a previous life, I completed my bachelors degree at <a href=http://www.eecs.berkeley.edu/>UC Berkeley</a>. 
+              Previously, I was a post-doctoral scholar at MIT, collaborating with <a href="https://groups.csail.mit.edu/locomotion/russt.html">Russ Tedrake</a> and <a href="https://people.csail.mit.edu/pulkitag/">Pulkit Agarwal</a>. 
+            </p>
+            <p>
+            I spent 6 wonderful years completing my PhD in machine learning and robotics at <a href=http://bair.berkeley.edu>BAIR</a> at <a href="https://www.berkeley.edu/">UC Berkeley</a>, where I was advised by <a href=https://people.eecs.berkeley.edu/~svlevine/>Professor Sergey Levine</a> and <a href=http://www.cs.berkeley.edu/~pabbeel/>Professor Pieter Abbeel</a>. In a previous life, I completed my bachelors degree also at <a href=http://www.eecs.berkeley.edu/>UC Berkeley</a>. 
             </p>
 
             <p>
-            My main research goal is to develop algorithms which enable robotic systems to learn how to perform complex tasks in a variety of unstructured environments. To that end, I work towards building deep reinforcement learning algorithms that can learn in the real world. Recently, I have been specifically focusing on the problems of reward specification, continual real world data collection and learning, offline reinforcement learning for robotics and multi-task learning and dexterous manipulation with robotic hands.
+            My main research goal is to develop algorithms which enable robotic systems to learn how to perform complex tasks in a variety of unstructured environments like offices and homes. To that end, I work towards building deep reinforcement learning algorithms that can learn in the real world. Recently, I have been specifically focusing on the problems of reward specification, continual real world data collection and learning, offline reinforcement learning for robotics, multi-task and meta-learning and dexterous manipulation with robotic hands
             </p>
 
             <p align=center>
@@ -97,7 +100,7 @@
             </p>
           </td>
           <td width="40%">
-            <img src="images/ta-abhishek.jpg" width="200">
+            <img src="images/abhgupta_sm.jpeg" width="200">
           </td>
         </tr>
       </table>
