added in redirect to UW website

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<meta charset="utf-8">
+<title>Redirecting to https://homes.cs.washington.edu/~abhgupta/</title>
+<meta http-equiv="refresh" content="0; URL=https://homes.cs.washington.edu/~abhgupta/">
+<link rel="canonical" href="https://homes.cs.washington.edu/~abhgupta/">
+
 <html>
   <head>
   <meta name=viewport content="width=device-width, initial-scale=1">
